--- a/index26.html
+++ b/index26.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,6 +10,7 @@
 	</style>
 </head>
 <body>
+dddd
 	<div id="container">
 		<h1>Like a Diamond</h1>
 		<div class="Wrap">
